# glade

./: .clippy.toml  .gitignore  .gitmodules  .prettierignore  .rules.md  Cargo.toml  LICENSE  README.md  cspell.json  eslint.config.js  fps.md  multiline_fix_plan.md  package.json  theme.plan.md  tsconfig.json  turbo.json
.claude/: settings.local.json
.zed/: settings.json
scripts/: bootstrap.macos.sh  demo.flash.native.sh  demo.flash.web.sh  demo.native.sh  demo.web.sh  install.sh  libs.download.sh  libs.sync.sh  pre.sh  release.sh  upload.dawn.sh
