[workspace]
resolver = "2"
members = ["packages/layout", "packages/shaper", "packages/svg"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
cosmic-text = { version = "0.16", default-features = false, features = ["no_std", "wasm-web"] }
js-sys = "0.3.83"
lyon = "1.0.16"
regex-lite = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
swash = { version = "0.2.6", features = ["scale", "render"] }
taffy = "0.9.2"
wasm-bindgen = "0.2.106"
wasm-bindgen-test = "0.3.56"
web-sys = { version = "0.3.83", features = ["console"] }

[profile.release]
opt-level = "s"
lto = true
